Don't use deprecated newInstance() method
Signed-off-by: Sven Strickroth <email@cs-ware.de>